Fixed reordering of results
Signed-off-by: Guian Gumpac <guian.gumpac@improving.com>